# simplify-html-for-llm

./: .gitignore  README.md  app.py  pyproject.toml  simplify_html.py  tailwind.py
.cursor/rules/: pytest-run.mdc  uv.mdc
tests/: test_simplify_html.py
